[gd_scene load_steps=12 format=3 uid="uid://blu8emt5l7yex"]

[ext_resource type="Script" path="res://root.gd" id="1_owfvw"]
[ext_resource type="Script" path="res://game/core/common/pid_controller_module.gd" id="2_bbwe3"]
[ext_resource type="Script" path="res://app/app.gd" id="2_prex2"]
[ext_resource type="Script" path="res://game/core/common/bob_sine_module.gd" id="3_w0mu2"]
[ext_resource type="Script" path="res://game/core/common/day_time_module.gd" id="4_tavwi"]
[ext_resource type="Script" path="res://game/core/common/input_map_module.gd" id="5_ccuo1"]
[ext_resource type="Script" path="res://game/core/common/event_bus_module.gd" id="5_f7ete"]
[ext_resource type="PackedScene" uid="uid://brj8m71cptbtw" path="res://game/core/interaction/interaction_manager.tscn" id="6_ytl1l"]
[ext_resource type="Script" path="res://game/core/common/mouse_ray_cast_module.gd" id="7_gyq80"]
[ext_resource type="Script" path="res://game/core/common/look_at_target_module.gd" id="7_lsvol"]
[ext_resource type="Script" path="res://game/core/common/scene_manager_module.gd" id="9_leehc"]

[node name="root" type="Node"]
script = ExtResource("1_owfvw")
starting_hour = 6

[node name="app" type="Node" parent="."]
script = ExtResource("2_prex2")

[node name="game" type="Node" parent="."]

[node name="common" type="Node" parent="."]

[node name="bob_sine" type="Node" parent="common"]
script = ExtResource("3_w0mu2")

[node name="day_time" type="Node" parent="common"]
script = ExtResource("4_tavwi")

[node name="event_bus" type="Node" parent="common"]
script = ExtResource("5_f7ete")

[node name="input_map" type="Node" parent="common"]
script = ExtResource("5_ccuo1")

[node name="interaction_manager" parent="common" instance=ExtResource("6_ytl1l")]

[node name="look_at_target" type="Node" parent="common"]
script = ExtResource("7_lsvol")

[node name="mouse_ray_cast" type="Node" parent="common"]
script = ExtResource("7_gyq80")

[node name="pid_controller" type="Node" parent="common"]
script = ExtResource("2_bbwe3")

[node name="scene_manager" type="Node" parent="common"]
script = ExtResource("9_leehc")

[node name="ui" type="Node" parent="."]

[node name="fx_transition" type="Node" parent="ui"]
